# toy_ray_tracer

./: .gitignore  CMakeLists.txt  FoCG_3_Ray_Tracer.sln  README.md  mod.txt
FoCG_3_Ray_Tracer/: FoCG_3_Ray_Tracer.cpp  FoCG_3_Ray_Tracer.vcxproj  FoCG_3_Ray_Tracer.vcxproj.filters  PointLight.cpp  PointLight.h  RGB.cpp  RGB.h  Ray.cpp  Ray.h  RayTracer.cpp  RayTracer.h  Sphere.cpp  Sphere.h  Surface.h  Texture.h
src/: camera.cpp  camera.h  hit_record.h  main.cpp  ray.h  utils.cpp  utils.h  vec3.cpp  vec3.h
src/hittable/: aabb.cpp  aabb.h  bvh_node.cpp  bvh_node.h  cuboid.cpp  cuboid.h  hittable.h  hittable_list.cpp  hittable_list.h  rectangle_xy.cpp  rectangle_xy.h  rectangle_xz.cpp  rectangle_xz.h  rectangle_yz.cpp  rectangle_yz.h  rotation_y.cpp  rotation_y.h  sphere.cpp  sphere.h  translation.cpp  translation.h
src/material/: dielectric.cpp  dielectric.h  emissive.h  lambertian.cpp  lambertian.h  material.h  metal.cpp  metal.h
utils/: genmov.cpp
